Fix text align

--- a/fitnesspal/static/fitnesspal/profile_style.css
+++ b/fitnesspal/static/fitnesspal/profile_style.css
@@ -103,4 +103,17 @@ background: linear-gradient(to right, #5691c8, #457fca); /* W3C, IE 10+/ Edge, F
  color:white;
 
 }
+.numberCircle {
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    padding: 8px;
+
+    background: #3B7097;
+    border: 2px solid #666;
+    color: #3B7097;
+    text-align: center;
+
+    font: 32px Arial, sans-serif;
+}
 
